[gd_scene load_steps=2 format=3 uid="uid://c8k3v2oax4mjy"]

[ext_resource type="Script" path="res://src/ui/multiplayer/UnifiedRoomUI.gd" id="1_script"]

[node name="UnifiedRoomUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_script")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.1, 0.12, 0.15, 0.95)

[node name="VBox" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 15

[node name="Title" type="Label" parent="VBox"]
layout_mode = 2
text = "ðŸŽ® MULTIPLAYER ROOMS"
horizontal_alignment = 1
theme_override_font_sizes/font_size = 48

[node name="StatusLabel" type="Label" parent="VBox"]
layout_mode = 2
text = "Connecting..."
horizontal_alignment = 1
theme_override_font_sizes/font_size = 24

[node name="HSeparator" type="HSeparator" parent="VBox"]
layout_mode = 2

[node name="CurrentRoomPanel" type="PanelContainer" parent="VBox"]
visible = false
layout_mode = 2

[node name="HBox" type="HBoxContainer" parent="VBox/CurrentRoomPanel"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="RoomNameLabel" type="Label" parent="VBox/CurrentRoomPanel/HBox"]
layout_mode = 2
size_flags_horizontal = 3
text = "Room: Test Room"
theme_override_font_sizes/font_size = 32

[node name="PlayerCountLabel" type="Label" parent="VBox/CurrentRoomPanel/HBox"]
layout_mode = 2
text = "ðŸ‘¥ 1"
theme_override_font_sizes/font_size = 28

[node name="LeaveButton" type="Button" parent="VBox/CurrentRoomPanel/HBox"]
custom_minimum_size = Vector2(100, 40)
layout_mode = 2
text = "Leave"
theme_override_font_sizes/font_size = 24

[node name="HSeparator2" type="HSeparator" parent="VBox"]
layout_mode = 2

[node name="AvailableRoomsHeader" type="HBoxContainer" parent="VBox"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="Title" type="Label" parent="VBox/AvailableRoomsHeader"]
layout_mode = 2
size_flags_horizontal = 3
text = "AVAILABLE ROOMS"
theme_override_font_sizes/font_size = 32

[node name="CreateRoomButton" type="Button" parent="VBox/AvailableRoomsHeader"]
custom_minimum_size = Vector2(120, 35)
layout_mode = 2
text = "Create Room"
theme_override_font_sizes/font_size = 22

[node name="RefreshButton" type="Button" parent="VBox/AvailableRoomsHeader"]
custom_minimum_size = Vector2(100, 35)
layout_mode = 2
text = "ðŸ”„ Refresh"
theme_override_font_sizes/font_size = 22

[node name="RoomListScroll" type="ScrollContainer" parent="VBox"]
layout_mode = 2
size_flags_vertical = 3

[node name="RoomListContainer" type="VBoxContainer" parent="VBox/RoomListScroll"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 10
